--- a/CHESSApp_front_public/package.json
+++ b/CHESSApp_front_public/package.json
@@ -1,6 +1,7 @@
 {
   "name": "chessapp-front",
-  "homepage": "https://ccb.jhu.edu/CHESS",
+  "homepage": "https://ccb.jhu.edu/chess_app",
+  "author": "Ales Varabyou <avarabyou@jhu.edu>",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -11,14 +12,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "3dmol": "^2.5.2",
     "@fontsource/roboto": "^5.0.3",
-    "@jbrowse/core": "^2.0.0",
-    "@jbrowse/react-linear-genome-view": "^2.0.0",
+    "@jbrowse/core": "^3.6.4",
+    "@jbrowse/react-linear-genome-view": "^3.1.0",
     "@reduxjs/toolkit": "^2.3.0",
     "@types/d3": "^7.4.3",
-    "3dmol": "^2.5.2",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.13.1",
+    "buffer": "^6.0.3",
     "comlink": "^4.4.2",
     "d3": "^7.9.0",
     "jszip": "^3.10.1",
