--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,8 @@ services:
       - ./db_init.sh:/docker-entrypoint-initdb.d/db_init_1.sh:ro
       - ./CHESSApp_DB/chess.db.schema.mysql.sql:/docker-entrypoint-initdb.d/db_init_2.sql:ro
     healthcheck:
-      test: ["CMD-SHELL", "mysqladmin ping -h 127.0.0.1 -uroot -p$${MYSQL_ROOT_PASSWORD}"]
+#      test: ["CMD-SHELL", "mysqladmin ping -h 127.0.0.1 -uroot -p$${MYSQL_ROOT_PASSWORD}"]
+      test: ["CMD", "mysqladmin", "ping", "-h", "127.0.0.1", "-uroot", "-p$${MYSQL_ROOT_PASSWORD}"]
       interval: 5s
       timeout: 5s
       retries: 5
@@ -27,7 +28,8 @@ services:
 
   backend_admin:
     image: dpuiu2/chess_web-backend:latest
-    command: ["/opt/venv/bin/gunicorn", "-w", "4", "-b", "0.0.0.0:5001", "--timeout", "1200", "app_admin:app"]
+#    command: ["/opt/venv/bin/gunicorn", "-w", "${GUNICORN_WORKERS:-4}", "-b", "0.0.0.0:5001", "--timeout", "1200", "app_admin:app"]
+    command: ["/opt/venv/bin/gunicorn", "-w", "${GUNICORN_WORKERS:-4}", "-b", "0.0.0.0:5001", "--timeout", "1200", "--log-level", "debug", "--access-logfile", "-", "--error-logfile", "-","app_admin:app"]
     restart: unless-stopped
     depends_on:
       mysql:
@@ -40,7 +42,7 @@ services:
       FLASK_DEBUG: 0
       FLASK_ADMIN_PORT: ${FLASK_ADMIN_PORT}
       FRONTEND_ADMIN_PORT: ${FRONTEND_ADMIN_PORT}
-      CORS_ALLOWED_ORIGINS:  http://localhost:${FRONTEND_ADMIN_PORT}
+      CORS_ALLOWED_ORIGINS: http://localhost:${FRONTEND_ADMIN_PORT}
     ports:
       - "${FLASK_ADMIN_PORT}:5001"
     volumes:
@@ -48,7 +50,8 @@ services:
 
   frontend_admin:
     image: dpuiu2/chess_web-frontend_admin:latest
-    command: ["npm", "run", "dev", "--", "--host", "0.0.0.0", "--port", "5112"]
+#    command: ["npm", "run", "dev", "--", "--host", "0.0.0.0", "--port", "5112"]
+    command: ["npm", "run", "dev", "--verbose", "--", "--host", "0.0.0.0", "--port", "5112"]
     restart: unless-stopped
     environment:
       FRONTEND_ADMIN_PORT: ${FRONTEND_ADMIN_PORT}
@@ -61,7 +64,8 @@ services:
 
   public:
     image: dpuiu2/chess_web-public:latest
-    command: ["/opt/venv/bin/gunicorn", "-w", "4", "-b", "0.0.0.0:5000", "--timeout", "600", "app_public:app"]
+#    command: ["/opt/venv/bin/gunicorn", "-w", "${GUNICORN_WORKERS:-4}", "-b", "0.0.0.0:5000", "--timeout", "600", "app_public:app"]
+    command: ["/opt/venv/bin/gunicorn", "-w", "${GUNICORN_WORKERS:-4}", "-b", "0.0.0.0:5000", "--timeout", "600", "--log-level", "debug", "--access-logfile", "-", "--error-logfile", "-", "app_public:app"]
     restart: unless-stopped
     depends_on:
       mysql:
@@ -74,8 +78,11 @@ services:
       FLASK_DEBUG: 0
       FLASK_PUBLIC_PORT: ${FLASK_PUBLIC_PORT}
       CHESS_FRONTEND_DIST: /app/dist
+      CORS_ALLOWED_ORIGINS: http://localhost:${FLASK_PUBLIC_PORT}
+#     FRONTEND_PUBLIC_PORT: ${FRONTEND_PUBLIC_PORT}
     ports:
       - "${FLASK_PUBLIC_PORT}:5000"
+#     - "${FRONTEND_PUBLIC_PORT}:5113"
     volumes:
       - ./CHESS_WEB:/CHESS_WEB
 
